# RFP

backend/: .env  .env.example  .gitignore-api  Dockerfile  README.md  alembic.ini  gunicorn_config.py  main.py  main_minimal.py  pyproject.toml  requirements.txt  test_text_cleaning.py
backend/alembic/: env.py
backend/alembic/versions/: f617d950135d_initial_schema.py
backend/app/: auth.py  db.py
backend/app/config/: database.py  defaults.py  firebase.py  llm_factory.py  mistral.py  monitoring.py  supabase.py  vector_db.py
backend/app/middleware/: auth.py
backend/app/models/: curated_qa_models.py  files_models.py  images_models.py  models.py  routers_models.py  tickets_models.py
backend/app/routers/: bid.py  bids.py  curated_qas.py  dossier.py  evaluation.py  evaluations.py  file.py  knowledge_hub.py  labels.py  project.py  projects.py  rfps.py  search.py  thread.py  ticket.py  uploaded_docs.py  user.py  vendor.py  web_pages.py  websockets.py
backend/app/schemas/: bids.py  evaluations.py  projects.py  rfps.py
backend/app/services/: ai_orchestration.py  bid_service.py  doc_creation.py  dossier_chat.py  dossier_service.py  embeddings_service.py  evaluation_service.py  explanation.py  extraction.py  files.py  llm_agents.py  pdf_parsing.py  project_service.py  prompts.py  scoring.py  search_service.py  thread_service.py  ticket_service.py  user_service.py  vector_adapter.py  vectorization_service.py  vendor_service.py  websocket_manager.py
backend/app/services/file/: image.py  (+4 more)
backend/app/vector/: base.py  factory.py  pgvector_store.py  pinecone_store.py
(+52 files in other folders)
